--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+              <a class="nav-link js-scroll-trigger" href="#education">Experience</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#my_job">My Job</a>
@@ -119,7 +119,7 @@
     <!-- Education Section -->
     <section class="success" id="education" style="background-color: #004c40">
       <div class="container-fluid">
-        <h2 class="text-center">Education</h2>
+        <h2 class="text-center">Experience</h2>
         <hr class="star-light">
         <div class="row">
         <div class="container-fluid">
